overleaf/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overleaf
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: overleaf
  template:
    metadata:
      labels:
        app: overleaf
    spec:
      containers:
        - name: overleaf
          image: overleaf/overleaf:latest
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 60
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          volumeMounts:
            - name: data
              mountPath: /var/lib/overleaf
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: overleaf-pvc
