overleaf/service.yml
apiVersion: v1
kind: Service
metadata:
  name: overleaf
spec:
  selector:
    app: overleaf
  ports:
    - name: http
      port: 80
      targetPort: http
